# bulp-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  bulb-api.postman_collection.json  bulb.db  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
.omc/: project-memory.json
.omc/state/: agent-replay-a44b7109-3ec8-4235-9ebb-3ff0940db2d1.jsonl  subagent-tracking.json
.omc/state/sessions/a44b7109-3ec8-4235-9ebb-3ff0940db2d1/: session-started.json
esp8266/: bulb-client.ino
esp8266/bulb-client/: bulb-client.ino
src/: db.rs  handlers.rs  main.rs  models.rs  scheduler.rs
